# arcade.dot

./: .gitignore  BUILD_PLAN.md  CLAUDE.md  GOTCHAS.md  README.md  SPEC.md  arcade.apps.json  deploy.sh  index.html  package-lock.json  package.json  setup.sh  template.json  vite.config.ts
contracts/: Cargo.toml  DEPLOYMENT.md  cdm.json
contracts/.cargo/: config.toml
contracts/arcade/: lib.rs
contracts/gcs-reference/: Cargo.toml  lib.rs  tests.rs
contracts/leaderboard/: lib.rs
contracts/registry/: Cargo.toml  lib.rs  tests.rs
contracts/scripts/: deploy-and-verify.mjs  run-deploy.sh
dashboard/: .gitignore  .npmrc  README.md  cdm.json  package-lock.json  package.json  playwright.config.ts  setup.sh  tsconfig.json  vitest.config.ts  vitest.smoke.config.ts
dashboard/src/: App.css  App.tsx  arcade-reads.ts  arcade.ts  chain-reads.ts  composition.ts  displayName.test.ts  fake-reads.test.ts  fake-reads.ts  logic.test.ts  logic.ts  main.tsx  names.test.ts  placeholder.test.ts  placeholder.ts  read-strategy.test.ts  reads-context.tsx  router.test.ts  router.ts  types.ts  vite-env.d.ts
dashboard/src/abis/: DotnsReverseResolver.json
dashboard/src/components/: ActivityRail.tsx  FeaturedHero.tsx  GameCapsule.tsx  GameCard.tsx  GameList.tsx  Leaderboard.tsx  RecentPlays.tsx  Thumbnail.tsx  useNow.ts  useResolvedNames.ts  useTopPlayer.ts
dashboard/src/pages/: About.tsx  GameDetail.tsx  Home.tsx
dashboard/test/e2e/: dashboard.e2e.ts
dashboard/test/smoke/: registry.smoke.ts
docs/: modding.md
game-template/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  arcade.config.json  cdm.json  index.html  package-lock.json  package.json  playwright.boot.config.ts  playwright.config.ts  quests.json  setup.sh  tailwind.config.js  template.json  tsconfig.json  vitest.config.ts  vitest.e2e.config.ts
game-template/contracts/arcade/: Cargo.toml  leaderboard_abi.json
game-template/contracts/gcs-reference/: lib.rs
game-template/contracts/leaderboard/: Cargo.toml  lib.rs
game-template/docs/: launch-games.md  modding.md
game-template/scripts/: deploy-contract.mjs  gen-thumbnail.mjs  register-listing.mjs  ship.mjs  smoke-read.mjs  upload-thumbnail.mjs  verify-listing.mjs
game-template/scripts/lib/: chain.mjs  config.mjs  listing.mjs  pipeline-state.mjs
game-template/src/: App.css  App.tsx  account.ts  main.tsx  tokens.css
game-template/src/games/: active.ts  types.ts
game-template/src/scoreboard/: Leaderboard.tsx  api.ts  arcade.ts  bootstrap.ts  cdm.ts  contract-impl.ts  fake-gateway.ts  gateway.ts  gcs.ts  identifier.ts  local-impl.ts  reads.ts  scoreboard.ts  sdk-gateway.ts  tx.ts
game-template/test/boot/: boot.smoke.ts
game-template/test/e2e/: setup.ts  (+3 more)
spikes/nav-spike/: .gitignore  click-test.mjs  click-test2.mjs  package-lock.json
spikes/serving-repro/: repro.sh
src/: arcade.ts  vite-env.d.ts
src/scoreboard/: arcade.ts  cdm.ts  contract-impl.ts  local-impl.ts  signer.ts
(+18 files in other folders)
