[package]
name = "arcade"
version.workspace = true
edition.workspace = true
description = "Arcade — singleton registry + cross-game leaderboard for every game built from this template."

# CDM package identity — required by `dot contract deploy` (v0.27+) detection.
[package.metadata.cdm]
package = "@example/arcade-playground"

[lib]
path = "lib.rs"

[[bin]]
name = "arcade"
path = "lib.rs"

[dependencies]
cdm = { workspace = true }
pvm_contract = { workspace = true }
polkavm-derive = { workspace = true }
parity-scale-codec = { workspace = true }
picoalloc = { workspace = true }
