[package]
name = "leaderboard"
version.workspace = true
edition.workspace = true
description = "Leaderboard contract — keyed by caller, stores each player's personal best."

[lib]
path = "lib.rs"

[[bin]]
name = "leaderboard"
path = "lib.rs"

[dependencies]
cdm = { workspace = true }
pvm_contract = { workspace = true }
polkavm-derive = { workspace = true }
parity-scale-codec = { workspace = true }
picoalloc = { workspace = true }
